# reverser

./: .gitignore  CMakeLists.txt  main.cpp  pch.h
Design/: Reverser.vpp
ReverserLib/: CMakeLists.txt  Design.cpp  Design.h  EagleDOM.cpp  EagleDOM.h  GraphicsHelper.cpp  GraphicsHelper.h  IModelObserver.h  MainFrame.cpp  MainFrame.h  Model.cpp  Model.h  ModelInstance.cpp  ModelInstance.h  PathHelper.cpp  PathHelper.h  Placement.cpp  Placement.h  Reverser.cpp  Reverser.h  ReverserApp.cpp  ReverserApp.h  ReverserConfig.h.in  ReverserConst.h  XmlHelper.cpp  XmlHelper.h  pch.h
ReverserLib/board/: Board.cpp  Board.h
ReverserLib/components/: Attribute.cpp  Attribute.h  Component.cpp  Component.h  Components.cpp  Components.h  Layout.cpp  Layout.h  LayoutComponent.cpp  LayoutComponent.h  Layouts.cpp  Layouts.h  Part.cpp  Part.h  Parts.cpp
ReverserLib/design/: Design.cpp  Design.h  DesignPropertiesDlg.cpp  DesignPropertiesDlg.h
ReverserLib/dlg/: ComponentPropertiesDlg.cpp  ComponentPropertiesDlg.h  NetworkPropertiesDlg.cpp  PCBLayerDlg.cpp  PCBLayerDlg.h  PCBPropertiesDlg.cpp  PCBPropertiesDlg.h  PartAddDlg.cpp  PartAddDlg.h
ReverserLib/drawing/: Drawable.cpp  Drawable.h  SVG.cpp  SVG.h
ReverserLib/network/: Net.cpp  Net.h  Nets.cpp  Nets.h  Network.cpp  Network.h  NetworkListBox.cpp  NetworkListBox.h  Networks.cpp  Networks.h  PinRef.cpp  PinRef.h  Segment.cpp  Segment.h
ReverserLib/parts/: Attribute.cpp  Attribute.h  Device.cpp  Device.h  DeviceConnect.cpp  DeviceConnect.h  DeviceSet.cpp  DeviceSet.h  DeviceSets.cpp  DeviceSets.h  Element.cpp  Element.h  Elements.cpp  Elements.h  Gate.cpp  Gate.h  Instance.cpp  Instance.h  Junction.cpp  Junction.h  LibraryItem.cpp  LibraryItem.h  Package.cpp  Package.h  Packages.cpp  Packages.h  Pad.cpp  Pad.h  Part.cpp  Part.h  Parts.cpp  Parts.h  Pin.cpp  Pin.h  Primitive.cpp  Primitive.h  Symbol.cpp  Symbol.h  Symbols.cpp  Symbols.h  (+4 more)
ReverserLib/pcb/: Layer.cpp  Layer.h  PCB.cpp  PCB.h  PCBContext.cpp  PCBContext.h  PCBPanel.cpp  PCBPanel.h  PCBView.cpp  PCBView.h
ReverserLib/save/: Attribute.cpp  Component.cpp  Component.h  ComponentPropertiesDlg.cpp  Components.cpp  Layout.cpp  Layout.h  LayoutComponent.cpp  LayoutComponent.h  Layouts.cpp  ModelInstance.cpp  ModelInstance.h  NetworkPropertiesDlg.cpp  NetworkPropertiesDlg.h  Part.cpp  PartAddDlg.cpp  Parts.cpp  Parts.h  Symbols.cpp  Symbols.h
ReverserLib/save/network/: Network.cpp  NetworkListBox.cpp  NetworkListBox.h  Networks.cpp
ReverserLib/schematic/: Schematic.cpp  Schematic.h  SchematicPanel.cpp  SchematicPanel.h
Tests/: BoardTest.cpp  CMakeLists.txt  ComponentTest.cpp  ComponentsTest.cpp  DeviceSetsTest.cpp  ElementsTest.cpp  EmptyTest.cpp  LayoutTest.cpp  LayoutsTest.cpp  NetsTest.cpp  NetworkTest.cpp  NetworksTest.cpp  PackagesTest.cpp  PartTest.cpp  PartsTest.cpp  ReverserTest.cpp  SymbolsTest.cpp  XmlHelperTest.cpp  gtest_main.cpp
Tests/test-data/: example-brd.brd  example-sch.sch
Tests/test-lib/layouts/: box-2-18.xml  connector-9pin.xml  layouts.xml
Tests/test-lib/parts/: connector-9pin.xml  parts.xml  resistor-18.xml
lib/layouts/: box-0-33.ai  box-0-35.ai  box-11.ai  box-16.ai  box-18.ai  box-2-13.xml  box-2-18.xml  box-2-20.xml  box-2-31.xml  box-2-32.xml  box-b-2-35.xml  box-p-3.xml  cap-p-3.ai  connector-9pin.xml  diode-11.ai  diode-13.xml  layouts.xml  pad-4.xml  pot.xml  to-204.xml  to-39.ai  to-39.xml  to-66.xml  to-92.ai  to-92.xml
lib/parts/: cap-20.xml  cap-p-3.xml  connector-9pin.xml  diode-13.xml  fuse-35.xml  parts.xml  potentiometer.xml  resistor-13.xml  resistor-18.xml  resistor-32.xml  scr-to-66.xml  test-point.xml  transistor-npn-to204.xml  transistor-npn-to39.xml  transistor-npn-to92.xml  transistor-pnp-to39.xml  transistor-pnp-to92.xml  zener-diode-13.xml
rc/: component-properties.fbp  frame.fbp  frame.xrc  network-properties.fbp  network-properties.xrc  part-select.fbp  parts-select.xrc  pcb-layer.fbp  pcb-layer.xrc  pcb-panel.fbp  pcb-panel.xrc  pcb-properties.fbp  pcb-properties.xrc
rc/icons/: move.psd  part.psd
resources/: reverser.rc
resources/xrc/: reverser.fbp  reverser.xrc
resources/xrc/icons/: net.psd  pcb-top.psd  pcb.psd
